<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/abfr_img_logo"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/abfr_tv_app_version"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abfr_img_logo"/>

        <View
            android:id="@+id/divider_light_first"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="16dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abfr_tv_app_version"/>

        <TextView
            android:id="@+id/abfr_tv_about_tourish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_tourism"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_light_first" />

        <TextView
            android:id="@+id/abfr_tv_tourism_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_bg_about_text"
            android:padding="5dp"
            android:text="@string/about_tourism_detail"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abfr_tv_about_tourish" />

        <TextView
            android:id="@+id/abdr_tv_about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_me"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abfr_tv_tourism_detail" />

        <TextView
            android:id="@+id/abfr_tv_about_me_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_bg_about_text_purple"
            android:text="@string/about_me_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abdr_tv_about_me" />

        <TextView
            android:id="@+id/abfr_tv_open_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_open_source"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abfr_tv_about_me_detail" />

        <TextView
            android:id="@+id/tv_open_source_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_bg_about_text_green"
            android:padding="5dp"
            android:text="@string/about_open_source_detail"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abfr_tv_open_source" />









    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
